--- a/singolo1.css
+++ b/singolo1.css
@@ -95,12 +95,17 @@ a {
 
 .header__list {
   display: flex;
-  width: 400px;
+  flex-basis: 370px;
+  /* flex-wrap: wrap; */
 }
 
 .header__item {
   padding-left: 30px;
   position: relative;
+}
+
+.header__item:first-child {
+  padding-left: 0;
 }
 
 .header__link {
@@ -109,6 +114,10 @@ a {
   text-transform: uppercase;
   color: #ffffff;
   font-size: 11.66px;
+}
+
+.header__link--current {
+  color: #f06c64;
 }
 
 .header__item:not(:first-child)::before {
@@ -226,7 +235,6 @@ a {
   width: 33%;
   margin-bottom: 32px;
   max-width: 299px;
-  max-height: 93px;
   padding-left: 79px;
 }
 
