--- a/singolo2.css
+++ b/singolo2.css
@@ -39,7 +39,6 @@ input[type="radio"].visually-hidden {
   width: 980px;
   margin: 0 auto;
   padding: 0 20px;
-  /* background-color: red; */
 }
 
 img {
@@ -85,17 +84,20 @@ a {
 }
 
 .portfolio__tags {
-  margin-bottom: 23px;
+  margin-bottom: 21px;
 }
 
 .tag {
   font-family: 'Lato-Regular';
   font-size: 12px;
-  line-height: 21,56px;
+  line-height: 21.56px;
   border-radius: 5px;
   border-width: 1px;
-  padding: 3px 7.5px;
-  margin-right: 4.67px;
+  padding-top: 3px;
+  padding-right: 6.5px;
+  padding-bottom: 3px;
+  padding-left: 6px;
+  margin-right: 6px;
 }
 
 .tag_bordered {
@@ -106,6 +108,7 @@ a {
 .tag_selected {
   border: 1px solid #c5c5c5;
   color: #dedede;
+  letter-spacing: 0.5px;
 }
 
 .tag_selected:hover {
@@ -114,6 +117,7 @@ a {
 
 .tag_bordered:hover {
   cursor: pointer;
+  color: #15c2f7;
 }
 
 .layout-4-column {
@@ -126,6 +130,11 @@ a {
   padding-bottom: 20px;
 }
 
+.preview:nth-child(n+13) {
+  display: none;
+}
+
+
 .preview__img {
   display: block;
   width: 220px;
@@ -134,20 +143,16 @@ a {
 
 .about-us {
   background-color: #f2f2f2;
-  height: 728px;
+  height: 734px;
   padding-top: 60px;
   border-bottom: 6px solid #ffffff;
 }
-
-/* .about-us__inner {
-  height: 728px;
-} */
 
 .about-us__heading {
   font-size: 30px;
   font-family: "Lato-Black";
   color: #767e9e;
-  line-height: 17,86px;
+  line-height: 34.86px;
   margin-bottom: 20px;
   overflow: hidden;
 }
@@ -203,6 +208,8 @@ a {
   color: #666D89;
   line-height: 17.86px;
   margin-bottom: 11px;
+  height: 15.66px;
+  overflow: hidden;
 }
 
 .employee__text {
@@ -211,7 +218,8 @@ a {
   color: #767E9E;
   line-height: 21.56px;
   text-align: justify;
-  margin-bottom: 22px;
+  letter-spacing: -0.05px;
+  margin-bottom: 23px;
 }
 
 .social__list {
@@ -223,5 +231,22 @@ a {
 }
 
 .social__link {
+  cursor: pointer;
+}
+
+.social__link--facebook,
+.social__link--google,
+.social__link--linkedin,
+.social__link--twitter {
+  fill: #666d89;
+  width: 33.5px; 
+  height: 33.5px;
+}
+
+.social__link--facebook:hover,
+.social__link--google:hover,
+.social__link--linkedin:hover,
+.social__link--twitter:hover {
+  fill: #15c2f7;
   cursor: pointer;
 }
