--- a/singolo3.css
+++ b/singolo3.css
@@ -71,6 +71,7 @@ a {
   padding-top: 70px;
   margin-bottom: 27px;
   letter-spacing: -0.07px;
+  font-weight: 300;
 }
 
 .contact__description {
@@ -114,6 +115,7 @@ a {
   margin-bottom: 24px;
   text-align: justify;
   letter-spacing: -0.2px;
+  word-spacing: 0.5px;
 }
 
 .contact__input,
@@ -141,6 +143,11 @@ a {
   color: #ee8284;
   font-family: 'Lato-Regular';
   margin-left: 20px;
+}
+
+.contact__input:hover,
+.contact__line:hover {
+  background-color: #d6564faf;
 }
 
 .contact__line {
@@ -226,8 +233,8 @@ a {
 .footer__link--linkedin,
 .footer__link--twitter {
   fill: #666d89;
-  width: 33.5px; 
-  height: 33.5px;
+  width: 33px; 
+  height: 33px;
 }
 
 .footer__link--facebook:hover,
@@ -257,7 +264,7 @@ a {
 }
 
 .footer__item {
-  margin-left: 6px;
+  margin-left: 7px;
 }
 
 
