--- a/style.css
+++ b/style.css
@@ -184,6 +184,10 @@ a {
   outline: none;
 }
 
+.slider__btn-prev:hover {
+  opacity: 0.7;
+}
+
 .slider__btn-prev:active {
   opacity: 0.5;
 }
@@ -202,6 +206,10 @@ a {
   right: -6px;
   top: 281px;
   outline: none;
+}
+
+.slider__btn-next:hover {
+  opacity: 0.7;
 }
 
 .slider__btn-next:active {
@@ -242,7 +250,7 @@ a {
 
 .services__item {
   position: relative;
-  width: 33%;
+  width: 33.3%;
   margin-bottom: 37px;
   max-width: 301px;
   padding-left: 81px;
@@ -334,26 +342,29 @@ a {
 }
 
 .portfolio__tags {
-  margin-bottom: 20px;
+  margin-bottom: 19px;
 }
 
 .tag {
   font-family: 'Lato-Regular';
   font-size: 12px;
-  line-height: 21.56px;
+  line-height: 22px;
   border-radius: 5px;
-  border-width: 1px;
   padding-top: 3px;
   padding-right: 6.5px;
   padding-bottom: 3px;
-  padding-left: 6px;
-  margin-right: 6px;
+  padding-left: 7.2px;
+  margin-right: 5px;
 }
 
 .tag_bordered {
   border: 1px solid #767e9e;
   color: #767e9e;
   text-align: justify
+}
+
+.tag_bordered:last-child {
+padding-left: 5px;
 }
 
 .tag_selected {
@@ -558,8 +569,8 @@ a {
 .contact__title {
   font-family: "Lato-Black";
   font-size: 18px;
-  line-height: 17.86px;
-  margin-bottom: 11px;
+  line-height: 18px;
+  margin-bottom: 10px;
   padding-top: 2px;
   text-align: justify;
 }
@@ -567,7 +578,7 @@ a {
 .contact__text {
   font-family: "Lato-Regular";
   font-size: 12px;
-  line-height: 21.56px;
+  line-height: 21px;
   margin-bottom: 24px;
   text-align: justify;
   letter-spacing: -0.2px;
@@ -589,8 +600,43 @@ a {
   padding: 8px 15px;
 }
 
+input:focus:invalid {
+  filter: saturate(150%);
+}
+
 .contact__input {
   height: 39px;
+}
+
+.contact__input::-webkit-input-placeholder, .contact__line::-webkit-input-placeholder {
+  font-size: 12px;
+  color: #ee8284;
+  font-family: 'Lato-Regular';
+  margin-left: 20px;
+}
+
+.contact__input::-moz-placeholder,
+.contact__line::-moz-placeholder {
+  font-size: 12px;
+  color: #ee8284;
+  font-family: 'Lato-Regular';
+  margin-left: 20px;
+}
+
+.contact__input:-ms-input-placeholder,
+.contact__line:-ms-input-placeholder {
+  font-size: 12px;
+  color: #ee8284;
+  font-family: 'Lato-Regular';
+  margin-left: 20px;
+}
+
+.contact__input::-ms-input-placeholder,
+.contact__line::-ms-input-placeholder {
+  font-size: 12px;
+  color: #ee8284;
+  font-family: 'Lato-Regular';
+  margin-left: 20px;
 }
 
 .contact__input::placeholder,
@@ -733,6 +779,6 @@ a {
   font-size: 12px;
   color: #666d89;
   letter-spacing: -0.1px;
-  margin-left: 1px;
+  margin-left: 2px;
   margin-top: -3px;
 }
