--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -121,7 +122,7 @@ a {
   font-size: 11.66px;
 }
 
-.header__link--current {
+.header__link.header__link--current {
   color: #f06c64;
 }
 
@@ -145,18 +146,91 @@ a {
   min-height: 592px;
   background-color: #f06c64;
   border-bottom: 8px solid #ea676b;
+  /* padding-top: 95px; */
 }
 
-.container .slider__inner .slider__phone {
+
+/* .container .slider__inner .slider__phone {
   height: 592px;
-}
+} */
 
 .slider__inner {
   position: relative;
 }
 
 .slider__phone {
+  display: none;
+  position: relative;
+  animation: 0.5s ease-in-out;
+}
+
+.slider__phone.active {
   display: flex;
+}
+
+/*----------------------*/
+
+.active,
+.next {
+display: block;
+}
+
+.next {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.left {
+  position: absolute;
+  top: 280px;
+  left: 40px;
+}
+.right {
+  position: absolute;
+  top: 280px;
+  right: 40px;
+}
+
+.to-left {
+  animation-name: left;
+}
+
+.from-right {
+  animation-name: right;
+}
+
+.to-right {
+  animation-name: right;
+  animation-direction: reverse;
+}
+
+.from-left {
+  animation-name: left;
+  animation-direction: reverse;
+}
+
+@keyframes left {
+  from {
+    left: 0;
+  }
+  to {
+    left: -100%;
+  }
+}
+
+@keyframes right {
+  from {
+    left: 100%;
+  }
+  to {
+    left: 0;
+  }
+}
+
+.second {
+  height: 584px;
+  background-color:#648BF0;
+  width: 100%;
 }
 
 .slider__phone--vertical {
@@ -182,6 +256,7 @@ a {
   top: 281px;
   left: 2px;
   outline: none;
+  z-index: 100;
 }
 
 .slider__btn-prev:hover {
@@ -214,6 +289,23 @@ a {
 
 .slider__btn-next:active {
   opacity: 0.5;
+}
+
+/*off*/
+
+.vertical-off {
+  position: absolute;
+  display: none;
+  top: 53px;
+  left: 70px;
+  cursor: pointer;
+}
+.horizontal-off {
+  position: absolute;
+  display: none;
+  top: 174px;
+  right: 95px;
+  cursor: pointer;
 }
 
 .services {
@@ -364,7 +456,7 @@ a {
 }
 
 .tag_bordered:last-child {
-padding-left: 5px;
+  padding-left: 5px;
 }
 
 .tag_selected {
@@ -376,6 +468,7 @@ padding-left: 5px;
 
 .tag_selected:hover {
   cursor: pointer;
+  color: #15c2f7;
 }
 
 .tag_bordered:hover {
@@ -405,6 +498,13 @@ padding-left: 5px;
 
 .preview__img:nth-child(n+13) {
   display: none;
+}
+
+
+/*border: 3px solid red;*/
+
+.image_selected {
+  border: 5px solid #F06C64;
 }
 
 .about-us {
