--- a/style.css
+++ b/style.css
@@ -504,7 +504,7 @@ display: block;
 /*border: 3px solid red;*/
 
 .image_selected {
-  border: 5px solid #F06C64;
+  outline: 5px solid #F06C64;
 }
 
 .about-us {
@@ -882,3 +882,47 @@ input:focus:invalid {
   margin-left: 2px;
   margin-top: -3px;
 }
+
+
+/*modal*/
+
+.modal {
+  display: none; /*Hidden by default*/
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #f2f2f2;
+  margin: auto;
+  padding: 20px;
+  border: 5px solid #dad4d4;
+  width: 50%;
+  border-radius: 10px;
+  color: #666d89;
+}
+
+.close {
+  color: #666d89;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  font-family: "Lato-Black";
+}
+
+.close:hover,
+.close:focus {
+  color: #666d89;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/*modal-end*/
