--- a/style.css
+++ b/style.css
@@ -9,6 +9,80 @@ body {
   font-family: 'Lato-Regular', sans-serif;
   width: 100%;
 }
+/* 
+test */
+.logo__heading {
+  font-family: 'Lato-Bold';
+  font-weight: bold;
+  display: block;
+  text-transform: uppercase;
+  font-size: 25px;
+  color: #ffffff;
+  padding-bottom: 10px;
+  letter-spacing: -0.5px;
+  position: relative;
+}
+
+.logo__link {
+  cursor: pointer;
+  color: inherit;
+}
+
+.star {
+  font-size: 24px;
+  bottom: 10px;
+  position: absolute;
+  color: #bc5c59;
+}
+
+nav ul {
+  margin: 0;
+}
+
+nav ul li,
+.social li {
+  display: inline-block;
+  
+  list-style-type: none;
+}
+
+nav a {
+  position: relative;
+
+  font-size: 12px;
+  text-decoration: none;
+  font-family: 'Lato-Bold';
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #f06c64;
+}
+
+nav li:not(:first-child) a {
+  margin-left: 2.19em;
+}
+
+nav li:not(:first-child) a:before {
+  content: "·";
+  position: absolute;
+  top: 0;
+  left: -1.35em;
+  color: #494e62;
+  border-radius: 50%;
+}
+
+nav a:not(.current) {
+  color: #ffffff;
+  cursor: pointer;
+}
+
+nav a:not(.link-current):hover {
+  color: #f06c64;
+}
+
+nav a.current {
+  cursor: default;
+}
 
 *,
 ::before,
@@ -66,6 +140,9 @@ a {
   background-color: #2d303a;
   height: 95px;
   border-bottom: 6px solid #323746;
+  position: fixed;
+  width: 100%;
+  z-index: 99999;
 }
 
 .menu {
@@ -142,11 +219,19 @@ a {
   color: #f06c64;
 }
 
+.slider,
+.services,
+.portfolio,
+.about-us,
+.contact { 
+  scroll-margin-top: 89px;
+}
+
 .slider {
   min-height: 592px;
   background-color: #f06c64;
   border-bottom: 8px solid #ea676b;
-  /* padding-top: 95px; */
+  padding-top: 89px;
 }
 
 
@@ -228,7 +313,7 @@ display: block;
 }
 
 .second {
-  height: 584px;
+  height: 539px;
   background-color:#648BF0;
   width: 100%;
 }
@@ -447,6 +532,9 @@ display: block;
   padding-bottom: 3px;
   padding-left: 7.2px;
   margin-right: 5px;
+  border: 1px solid #767e9e;
+  cursor: pointer;
+
 }
 
 .tag_bordered {
@@ -471,6 +559,7 @@ display: block;
   color: #15c2f7;
 }
 
+tag,
 .tag_bordered:hover {
   cursor: pointer;
   color: #15c2f7;
@@ -910,13 +999,22 @@ input:focus:invalid {
   color: #666d89;
 }
 
+.close-block {
+  text-align: center;
+}
+
 .close {
   color: #666d89;
-  float: right;
   font-size: 28px;
-  font-weight: bold;
   font-family: "Lato-Black";
+  width: 30%;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 20px;
+  border: 2px solid #dad4d4;
+  text-transform: uppercase;
 }
+
 
 .close:hover,
 .close:focus {
