--- a/style.css
+++ b/style.css
@@ -7,8 +7,41 @@ html {
 
 body {
   font-family: 'Lato-Regular', sans-serif;
-  width: 100%;
+  /* width: 100%; */
 }
+.slider,
+.services,
+.portfolio,
+.about-us,
+.contact { 
+  /* width: 100%; */
+  scroll-margin-top: 89px;
+}
+/*RESPONSIVE*/
+.container {
+  width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+nav .container {
+  width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+/* .container { */
+  /* width: 980px;
+  margin: 0 auto;
+  padding: 0 20px; */
+    /* width: 100%;
+    max-width: 1020px;
+    margin: 0 auto;
+    padding-right: 40px;
+    padding-left: 40px; */
+/* } */
+/*RESPONSIVE*/
+
 /* 
 test */
 .logo__heading {
@@ -42,7 +75,6 @@ nav ul {
 nav ul li,
 .social li {
   display: inline-block;
-  
   list-style-type: none;
 }
 
@@ -84,6 +116,7 @@ nav a.current {
   cursor: default;
 }
 
+
 *,
 ::before,
 *::after {
@@ -112,15 +145,9 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
-.container {
-  width: 980px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 ul,
@@ -134,6 +161,8 @@ a {
   text-decoration: none;
 }
 
+
+
 /*singolo-1*/
 
 .header {
@@ -143,6 +172,8 @@ a {
   position: fixed;
   width: 100%;
   z-index: 99999;
+  align-items: center;
+  display: flex;
 }
 
 .menu {
@@ -176,20 +207,20 @@ a {
   color: #bc5c59;
 }
 
-.header__list {
+/* .header__list {
   display: flex;
   flex-basis: 370px;
   overflow: hidden;
-}
+} */
 
 .header__item {
   padding-left: 30px;
   position: relative;
 }
 
-.header__item:first-child {
+/* .header__item:first-child {
   padding-left: 0;
-}
+} */
 
 .header__link {
   font-family: 'Lato-Bold';
@@ -199,9 +230,9 @@ a {
   font-size: 11.66px;
 }
 
-.header__link.header__link--current {
+/* .header__link.header__link--current {
   color: #f06c64;
-}
+/* } */
 
 .header__item:not(:first-child)::before {
   content: "";
@@ -215,23 +246,17 @@ a {
   border-radius: 50%;
 }
 
-.header__link:hover {
+/* .header__link:hover {
   color: #f06c64;
-}
+} */
 
-.slider,
-.services,
-.portfolio,
-.about-us,
-.contact { 
-  scroll-margin-top: 89px;
-}
 
 .slider {
   min-height: 592px;
   background-color: #f06c64;
   border-bottom: 8px solid #ea676b;
   padding-top: 89px;
+  padding-bottom: 59px;
 }
 
 
@@ -326,6 +351,7 @@ display: block;
 
 .slider__phone--horizontal {
   padding-top: 174px;
+  padding-bottom: 119px;
 }
 
 .slider__btn-prev {
@@ -427,9 +453,9 @@ display: block;
 
 .services__item {
   position: relative;
-  width: 33.3%;
+  width: 32%;
   margin-bottom: 37px;
-  max-width: 301px;
+  /* max-width: 301px; */
   padding-left: 81px;
   height: 86px;
   overflow: hidden;
@@ -493,7 +519,7 @@ display: block;
 .portfolio {
   background-color: #2d303a;
   color: #666d89;
-  height: 870px;
+  /* height: 870px; */
   border-bottom: 6px solid #323746;
 }
 
@@ -518,9 +544,9 @@ display: block;
   text-align: justify;
 }
 
-.portfolio__tags {
+/* .portfolio__tags {
   margin-bottom: 18px;
-}
+} */
 
 .tag {
   font-family: 'Lato-Regular';
@@ -564,26 +590,50 @@ tag,
   cursor: pointer;
   color: #15c2f7;
 }
+/*RESPONSIVE*/
+
+/* .layout-4-column {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+} */
 
 .layout-4-column {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  margin-top: 18px;
+  margin-bottom: 40px;
 }
 
-.preview {
-  padding-bottom: 20px;
+.preview-item {
+  list-style: none;
+  margin: 10px 20px 10px 0px;
+  flex: 1 0 20%;
+}
+
+.preview-item::before {
+  content: "";
+  float: left;
+  padding-top: 100%;
 }
 
 .preview:nth-child(n+13) {
   display: none;
 }
 
-.preview__img {
+/* .preview__img {
+  width: 100%;
+  height: 100%;
+} */
+
+/* .preview__img {
   display: block;
   width: 220px;
   height: 187px;
-}
+} */
+
+
+/*RESPONSIVE*/
 
 .preview__img:nth-child(n+13) {
   display: none;
@@ -598,7 +648,8 @@ tag,
 
 .about-us {
   background-color: #f2f2f2;
-  height: 734px;
+  /* height: 734px; */
+  height: auto;
   padding-top: 60px;
   border-bottom: 6px solid #ffffff;
 }
@@ -626,35 +677,37 @@ tag,
 .layout-3-column {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .employee__content {
   display: flex;
   flex-direction: column;
-  width: 301px;
+  /* width: 301px; */
+  width: 32%;
 }
 
 .employee__person1 {
-  background-image: url('./assets/img/person1.png');
+  /* background-image: url('./assets/img/person1.png'); */
   background-repeat: no-repeat;
-  width: 302px;
-  height: 302px;
+  /* width: 302px;
+  height: 302px; */
   margin-bottom: 16px;
 }
 
 .employee__person2 {
-  background-image: url('./assets/img/person2.png');
+  /* background-image: url('./assets/img/person2.png');
   background-repeat: no-repeat;
   width: 302px;
-  height: 302px;
+  height: 302px; */
   margin-bottom: 16px;
 }
 
 .employee__person3 {
-  background-image: url('./assets/img/person3.png');
+  /* background-image: url('./assets/img/person3.png');
   background-repeat: no-repeat;
   width: 302px;
-  height: 302px;
+  height: 302px; */
   margin-bottom: 16px;
 }
 
@@ -714,7 +767,7 @@ tag,
 .contact {
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
-  height: 654px;
+  /* height: 654px; */
 }
 
 .contact__heading {
@@ -750,7 +803,8 @@ tag,
 }
 
 .contact__form {
-  width: 619px;
+  /* width: 619px; */
+  width: 62%;
   margin-right: 21px;
   margin-bottom: 9px;
 }
@@ -776,7 +830,7 @@ tag,
 
 .contact__input,
 .contact__line {
-  width: 619px;
+  width: 100%;
   color: #f48c8f;
   font-family: "Lato-Regular";
   font-size: 12px;
@@ -844,6 +898,10 @@ input:focus:invalid {
 .contact__line {
   resize: none;
   height: 202px;
+}
+
+.contact__content {
+  width: 33%;
 }
 
 .contact__adress {
@@ -1022,5 +1080,279 @@ input:focus:invalid {
   text-decoration: none;
   cursor: pointer;
 }
-
 /*modal-end*/
+
+#menu__toggle {
+  display: none;
+}
+
+.menu__btn {
+  display: none;
+}
+
+.mobile-logo {
+  display: none;
+}
+
+
+/*Responsive services*/
+/*Responsive services*/
+/*Responsive portfolio*/
+
+
+/*media-tablet*/ 
+ @media (max-width: 1019px) {
+  .container {
+    width: auto;
+  }
+
+  nav.container {
+    width: 100%;
+  }
+
+
+  .mobile-logo {
+    visibility: hidden;
+  }
+
+  .preview-item {
+    flex: 1 0 25%;
+  }
+
+  .services__item {
+    width: 48%;
+  }
+
+  .layout-2-column {
+    display: block;
+  }
+
+  .layout-2-column.contact__inner {
+    display: flex;
+  }
+}
+
+
+
+/*media-mobile -burger*/ 
+@media (max-width: 767px) {
+
+  .header__list {
+    display: none;
+  }
+
+  .menu {
+    display: block;
+    text-align: center;
+  }
+
+  .logo__heading {
+    padding-bottom: 0;
+  }
+
+    .preview-item {
+    flex: 1 0 35%;
+  }
+
+  .services__item {
+    width: 100%;
+  }
+
+  .layout-3-column {
+    display: block;
+  }
+
+  .employee__content {
+    width: 100%;
+  }
+
+  .header__list {
+    display: none;
+  }
+  
+  .mobile-logo {
+    position: absolute;
+    visibility: inherit;
+    top: 0px;
+  }
+
+  nav li:not(:first-child) a:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -1.35em;
+    color: #494e62;
+    border-radius: 50%;
+  }
+
+  nav li:not(:first-child) a {
+    margin: 0;
+  }
+
+  nav ul li, .social li {
+    list-style-type: none;
+    display: flex;
+    padding-left: 71px;
+    padding-bottom: 27px;
+  }
+
+  nav a {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    letter-spacing: -0.035em;
+  }
+  
+  .container {
+    margin: 0 auto;
+    width: auto;
+    padding: 0 20px;
+  }
+
+  .header {
+    background: #242424;
+    height: 71px;
+    border: none;
+  }
+
+  .header__list {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 278px;
+    height: 100%;
+    margin: 0;
+    padding: 232px 0;
+    list-style: none;
+    background: #2D303A;
+    box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
+    transition-duration: .25s;
+  }
+
+  #menu__toggle {
+  opacity: 0;
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 9px;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: -9px;
+    /* transform: rotate(90deg); */
+  }
+  #menu__toggle:checked ~ .header__list {
+    visibility: visible;
+    left: 0;
+  }
+
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 26px;
+    left: 20px;
+    width: 25px;
+    height: 20px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2.4px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    transition-duration: .25s;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+
+/* .menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+
+  width: 300px;
+  height: 100%;
+
+  margin: 0;
+  padding: 80px 0;
+
+  list-style: none;
+
+  background-color: #ECEFF1;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+
+  transition-duration: .25s;
+} */
+
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: .25s;
+  }
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
+
+  .menu {
+    display: block;
+    text-align: center;
+  }
+
+  .logo__heading {
+    padding-bottom: 0;
+    padding-top: 24px;
+  }
+
+
+    .preview-item {
+    flex: 1 0 35%;
+  }
+
+  .services__item {
+    width: 100%;
+  }
+
+  .layout-2-column.contact__inner {
+    display: block;
+  }
+
+  .contact__form {
+    width: 100%;
+  }
+
+  .contact__content {
+    width: 100%;
+  }
+
+  .social li {
+    padding-left: 0;
+    padding-bottom: 0;
+  }
+}
