--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ test */
   padding-bottom: 10px;
   letter-spacing: -0.5px;
   position: relative;
+  margin-left: -5px;
+  padding-top: 10px;
 }
 
 .logo__link {
@@ -110,6 +112,10 @@ nav a:not(.current) {
 
 nav a:not(.link-current):hover {
   color: #f06c64;
+}
+
+.link-current::before {
+  visibility: hidden;
 }
 
 nav a.current {
@@ -207,6 +213,11 @@ a {
   color: #bc5c59;
 }
 
+ .header__list  {
+  padding-top: 10px;
+  padding-right: 6px;
+ }
+
 /* .header__list {
   display: flex;
   flex-basis: 370px;
@@ -222,19 +233,19 @@ a {
   padding-left: 0;
 } */
 
-.header__link {
+/* .header__link {
   font-family: 'Lato-Bold';
   font-weight: bold;
   text-transform: uppercase;
   color: #ffffff;
   font-size: 11.66px;
-}
+} */
 
 /* .header__link.header__link--current {
   color: #f06c64;
 /* } */
 
-.header__item:not(:first-child)::before {
+/* .header__item:not(:first-child)::before {
   content: "";
   position: absolute;
   background-color: #494E62;
@@ -244,7 +255,7 @@ a {
   left: 14px;
   right: 10px;
   border-radius: 50%;
-}
+} */
 
 /* .header__link:hover {
   color: #f06c64;
@@ -255,8 +266,8 @@ a {
   min-height: 592px;
   background-color: #f06c64;
   border-bottom: 8px solid #ea676b;
-  padding-top: 89px;
-  padding-bottom: 59px;
+  padding-top: 96px;
+  padding-bottom: 51px;
 }
 
 
@@ -338,20 +349,26 @@ display: block;
 }
 
 .second {
-  height: 539px;
+  height: 542px;
   background-color:#648BF0;
   width: 100%;
 }
 
+.slider.second {
+  background-color:#648BF0;
+}
+
 .slider__phone--vertical {
-  padding-top: 53px;
+  padding-top: 54px;
   padding-left: 72px;
-  padding-right: 73px;
+  padding-right: 72px;
+  padding-bottom: 2px;
 }
 
 .slider__phone--horizontal {
-  padding-top: 174px;
-  padding-bottom: 119px;
+  padding-top: 176px;
+  padding-bottom: 123px;
+  padding-right: 36px;
 }
 
 .slider__btn-prev {
@@ -364,8 +381,8 @@ display: block;
   background-color: transparent;
   border: none;
   position: absolute;
-  top: 281px;
-  left: 2px;
+  top: 52%;
+  left: 0%;
   outline: none;
   z-index: 100;
 }
@@ -389,8 +406,8 @@ display: block;
   background-position: 50% 50%;
   border: none;
   position: absolute;
-  right: -6px;
-  top: 281px;
+  top: 52%;
+  right: 0%;
   outline: none;
 }
 
@@ -454,7 +471,7 @@ display: block;
 .services__item {
   position: relative;
   width: 32%;
-  margin-bottom: 37px;
+  margin-bottom: 38px;
   /* max-width: 301px; */
   padding-left: 81px;
   height: 86px;
@@ -507,7 +524,7 @@ display: block;
 .services__info {
   font-family: 'Lato-Regular';
   font-size: 12px;
-  line-height: 21.56px;
+  line-height: 22px;
   letter-spacing: 0.05px;
   text-align: justify;
   word-spacing: -1.05px;
@@ -602,13 +619,24 @@ tag,
   display: flex;
   flex-wrap: wrap;
   margin-top: 18px;
-  margin-bottom: 40px;
+  margin-bottom: 46px;
+}
+.preview-item  {
+  height: 187px;
 }
 
 .preview-item {
   list-style: none;
-  margin: 10px 20px 10px 0px;
+  /* margin: 0px 20px 10px 10px; */
   flex: 1 0 20%;
+  margin-top: 0px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-left: 0px;
+}
+
+.preview-item:nth-child(4n + 4) {
+  margin-right: 0;
 }
 
 .preview-item::before {
@@ -651,6 +679,7 @@ tag,
   /* height: 734px; */
   height: auto;
   padding-top: 60px;
+  padding-bottom: 35px;
   border-bottom: 6px solid #ffffff;
 }
 
@@ -658,7 +687,7 @@ tag,
   font-size: 30px;
   font-family: "Lato-Black";
   color: #666d89;
-  line-height: 34.86px;
+  line-height: 35px;
   margin-bottom: 18px;
   overflow: hidden;
   text-align: justify
@@ -804,9 +833,9 @@ tag,
 
 .contact__form {
   /* width: 619px; */
-  width: 62%;
+  width: 68%;
   margin-right: 21px;
-  margin-bottom: 9px;
+  margin-bottom: 56px;
 }
 
 .contact__title {
@@ -839,7 +868,7 @@ tag,
   outline: none;
   border: none;
   border-radius: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 14px;
   padding: 8px 15px;
 }
 
@@ -897,7 +926,8 @@ input:focus:invalid {
 
 .contact__line {
   resize: none;
-  height: 202px;
+  /* height: 202px; */
+  height: 161px;
 }
 
 .contact__content {
@@ -954,21 +984,25 @@ input:focus:invalid {
   line-height: 21.56px;
 }
 
-.contact__button {
+/* .contact__button {
   text-align: center;
-}
+} */
 
 .button_send {
-  padding: 10px 20px 10px;
+  padding: 11px 20px 11px;
   font-style: normal;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
-  font-family: "Lato-Regular";
-  font-size: 18px;
-  line-height: 21.56px;
-  color: #f0d8d9;
-  background-color: #d6564f;
+  font-family: "Lato-Bold";
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #886A30;
+  font-weight: bold;
+  background-color: #FBC65F;
   border: none;
+  width: 136px;
 }
 
 .button_send:hover {
@@ -1106,21 +1140,87 @@ input:focus:invalid {
     width: auto;
   }
 
+  .slider,
+  .services,
+  .about-us,
+  .contact { 
+    padding: 0 20px;
+  }
+  
+
   nav.container {
     width: 100%;
   }
 
+  .logo__heading {
+      margin-left: 0px;
+  }
 
+  .logo__link {
+    padding-left: 18px;
+  }
+
+  .header__list {
+    padding-top: 0px;
+    padding-right: 19px;
+  }
+
+  .slider {
+    padding-bottom: 12px;
+    padding-top: 46px;
+    min-height: 548px;
+  }
+
+  .slider__phone--vertical {
+    padding-top: 91px;
+    padding-left: 64px;
+    padding-right: 56px;
+    padding-bottom: 28px;
+  }
+
+  .slider__phone--horizontal {
+    padding-right: 62;
+  }
+
+  .services {
+    padding-bottom: 18px;
+    padding-top: 41px;
+    min-height: 400px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .services__heading-info {
+    height: auto;
+  }
+
+  .services__heading-info {
+    margin-bottom: 36px;
+  }
+  
   .mobile-logo {
     visibility: hidden;
+  }
+
+  .portfolio {
+    padding-left: 20px;
+  }
+
+  .portfolio__description {
+    margin-bottom: 42px;
   }
 
   .preview-item {
     flex: 1 0 25%;
   }
 
+  .preview-item:nth-child(4n + 4) {
+    margin-right: 20px;
+  }
+
   .services__item {
     width: 48%;
+    margin-bottom: 57px;
   }
 
   .layout-2-column {
@@ -1130,12 +1230,82 @@ input:focus:invalid {
   .layout-2-column.contact__inner {
     display: flex;
   }
+
+  .layout-4-column {
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+
+  .about-us__inner {
+    padding-top: 52px;
+  }
+
+  .about-us__text {
+    margin-bottom: 38px;
+  }
+
+  .employee__person1,
+  .employee__person2,
+  .employee__person3 {
+    margin-bottom: 10px;
+  }
+
+  .employee__title {
+    margin-bottom: 5px;
+  }
+
+  .employee__text {
+    margin-bottom: 12px;
+  }
+
+  .about-us {
+    padding-bottom: 36px;
+  }
+
+  .contact__heading {
+    padding-top: 62px;
+        margin-bottom: 28px;
+  }
+
+  .contact__description {
+    margin-bottom: 25px;
+  }
+
+  .contact__input {
+    height: 36px;
+  }
+
+  .contact__input, .contact__line {
+    padding: 6px 7px;
+  }
+
+  .contact__title {
+    margin-bottom: 4px;
+    padding-top: 1px;
+    text-align: justify;
+  }
+  .contact__text {
+    margin-bottom: 16px;
+  }
+
+  .contact__form {
+    margin-right: 21px;
+    margin-bottom: 36px;
+  }
+  
+
+
+
 }
 
 
 
 /*media-mobile -burger*/ 
 @media (max-width: 767px) {
+
+  .modal-content {
+    font-size: 11px;
+  }
 
   .header__list {
     display: none;
@@ -1150,7 +1320,7 @@ input:focus:invalid {
     padding-bottom: 0;
   }
 
-    .preview-item {
+  .preview-item {
     flex: 1 0 35%;
   }
 
@@ -1164,6 +1334,12 @@ input:focus:invalid {
 
   .employee__content {
     width: 100%;
+  }
+
+  .button_send {
+    width: 100%;
+    padding-top: 14px;
+    padding-bottom: 14px;
   }
 
   .header__list {
@@ -1285,27 +1461,6 @@ input:focus:invalid {
     top: 8px;
   }
 
-/* .menu__box {
-  display: block;
-  position: fixed;
-  visibility: hidden;
-  top: 0;
-  left: -100%;
-
-  width: 300px;
-  height: 100%;
-
-  margin: 0;
-  padding: 80px 0;
-
-  list-style: none;
-
-  background-color: #ECEFF1;
-  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-
-  transition-duration: .25s;
-} */
-
   .menu__item {
     display: block;
     padding: 12px 24px;
@@ -1354,5 +1509,10 @@ input:focus:invalid {
   .social li {
     padding-left: 0;
     padding-bottom: 0;
+  }
+
+  .slider__phone--vertical {
+    padding-top: 108px;
+    padding-bottom: 65px;
   }
 }
